“メインビジュアル修正”

--- a/index.html
+++ b/index.html
@@ -99,25 +99,26 @@
     </header>
 
     <main>
-<section class="mainvisual">
-        <div class="main-wrapper">
-          <div class="main-text">
-            <h2>小さな一歩が<br /><span>未来を変える</span></h2>
-            <a href="#" class="btn btn-gradient"
+      <section class="mainvisual">
+            <div class="hero">
+              <div class="fade-bg"></div>
+
+      <!-- 背景レイヤー2枚 -->
+      <div class="hero-bg bg1"></div>
+      <div class="hero-bg bg2"></div>
+
+      <!-- 光のフィルムレイヤー -->
+      <div class="hero-film"></div>
+
+      <!-- キャッチコピー -->
+      <div class="hero-content">
+        <h1>小さな一歩が<br>未来を変える</h1>
+        <p>プログラミングで、あなたの未来に“選べる働き方”を<br>増やしませんか。</p>
+        <a href="#" class="btn btn-gradient"
               >無料カウンセリングを予約する</a
             >
-          </div>
-        </div>
-
-        <div class="hero">
-          <div class="fade-bg"></div>
-        </div>
-
-        <!-- <div class="mainvisual-items">
-          <img src="img/m-items1.PNG" class="rate-1" alt="99%">
-          <img src="img/m-items2.PNG" class="rate-2" alt="93%">
-          <img src="img/m-items3.PNG" class="rate-3" alt="1%">
-        </div> -->
+      </div>
+    </div>
       </section>
 
       
