メインビジュアル

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       <!-- キャッチコピー -->
       <div class="hero-content">
         <h1>小さな一歩が<br>未来を変える</h1>
-        <p>プログラミングで、あなたの未来に“選べる働き方”を<br>増やしませんか。</p>
+        <p>プログラミングで、理想の働き方を叶えよう</p>
         <a href="#" class="btn btn-gradient"
               >無料カウンセリングを予約する</a
             >
