“レスポンシブ変更”

--- a/index.html
+++ b/index.html
@@ -126,8 +126,10 @@
           <div class="section-wrapper">
             <div class="about-inner">
               <div class="about-text">
-                <p class="section-subtitle">About</p>
-                <h2 class="section-title">Pro Naviとは</h2>
+                <div class="section-header">
+                  <p class="section-subtitle">About</p>
+                  <h2 class="section-title">Pro Naviとは</h2>
+                </div>
                 <p class="about-lead">
                   ProNaviは、在宅ワークを叶えたい方のための6ヶ月集中プログラミングスクール。
                 </p>
@@ -151,8 +153,10 @@
 
       <section id="voice" class="voice">
         <div class="section-wrapper">
+          <div class="section-header">
             <p class="right-section-subtitle">Graduate Voices</p>
-            <h2 class="right-section-title">卒業生の声</h2>          
+            <h2 class="right-section-title">卒業生の声</h2>    
+          </div>      
 
         <div class="voice-list">
           <div class="voice-item">
@@ -205,10 +209,13 @@
         </div>
       </section>
 
+      <!-- 選ばれる理由 -->
       <section class="reason" id="reason">
         <div class="section-wrapper">
-          <p class="section-subtitle">Why Choose Us?</p>
+            <div class="section-heaser">
+            <p class="section-subtitle">Why Choose Us?</p>
           <h2 class="section-title">プロナビが選ばれる3つの理由</h2>
+          </div>
           <div class="reason-list">
             <div class="reason-item">
               <div class="reason-title">
@@ -277,6 +284,7 @@
         </div>
       </section>
 
+      <!-- スマホの画像があるところ -->
       <section class="study" id="study">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
           <path fill="#fffaed" fill-opacity="1" d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path>
@@ -319,10 +327,13 @@
         </svg>
       </section>
 
+      <!-- 受講の流れ -->
       <section class="flow" id="flow">
         <div class="section-wrapper">
-          <p class="section-subtitle">Flow</p>
-          <h2 class="section-title">受講の流れ</h2>
+          <div class="section-header">
+            <p class="section-subtitle">Flow</p>
+            <h2 class="section-title">受講の流れ</h2>
+          </div>
           <div class="flow-container">
             <div class="flow-item">
               <h5 class="item-title">Step1 スタートミーティング</h5>
@@ -360,6 +371,7 @@
         </div>
       </section>
 
+      <!-- 講師紹介 -->
       <section class="instructors" id="instructors">
         <div class="section-wrapper">
           <div class="section-header">
@@ -589,7 +601,7 @@
 
       <!-- 料金 -->
       <section class="price" id="price">
-        <div class="price-head section-wrapper">
+        <div class="price-header section-wrapper">
           <p class="right-section-subtitle">Pricing</p>
           <h2 class="right-section-title">料金</h2> 
         </div>
