“レスポンシブ変更”

--- a/index.html
+++ b/index.html
@@ -283,6 +283,10 @@
           </div>
         </div>
       </section>
+      
+      <a href="#" class="about-btn btn-gradient section-wrapper">
+        <span>無料カウンセリングを予約する</span>
+      </a>
 
       <!-- スマホの画像があるところ -->
       <section class="study" id="study">
@@ -421,11 +425,10 @@
           </div>
         </div>
       </section>
-
-  
-
-
-
+      
+      <a href="#" class="about-btn btn-gradient section-wrapper">
+        <span>無料カウンセリングを予約する</span>
+      </a>
 
             <!-- our support -->
       <section id="support">
