“レスポンシブ変更”

--- a/index.html
+++ b/index.html
@@ -141,8 +141,8 @@
     <section id="voice" class="voice">
       <div class="section-wrapper">
         <div class="section-header">
-          <p class="right-section-subtitle">Graduate Voices</p>
-          <h2 class="right-section-title">卒業生の声</h2>
+          <p class="section-subtitle">Graduate Voices</p>
+          <h2 class="section-title">卒業生の声</h2>
         </div>
 
         <div class="voice-list">
@@ -371,8 +371,8 @@
     <section class="instructors" id="instructors">
       <div class="section-wrapper">
         <div class="section-header">
-          <p class="right-section-subtitle">instructors</p>
-          <h2 class="right-section-title">講師紹介</h2>
+          <p class="section-subtitle">instructors</p>
+          <h2 class="section-title">講師紹介</h2>
         </div>
         <div class="instructors-container">
           <div class="instructors-item">
@@ -595,9 +595,9 @@
 
     <!-- 料金 -->
     <section class="price" id="price">
-      <div class="price-header section-wrapper">
-        <p class="right-section-subtitle">Pricing</p>
-        <h2 class="right-section-title">料金</h2>
+      <div class="price-header section-wrapper section-header">
+        <p class="section-subtitle">Pricing</p>
+        <h2 class="section-title">料金</h2>
       </div>
 
       <div class="price-container">
