“メインビジュアル修正”

--- a/index.html
+++ b/index.html
@@ -102,8 +102,24 @@
         <!-- キャッチコピー -->
         <div class="hero-content">
           <h1>小さな一歩が<br>未来を変える</h1>
-          <p>プログラミングで、理想の働き方を叶えよう</p>
+          <p>未経験でも、あなたのペースで確実に。<br>
+          つながりがささえてくれる学びのスクール。</p>
           <a href="#" class="btn btn-gradient">無料カウンセリングを予約する</a>
+
+
+      <div class="features">
+  <div class="feature-card">
+    <p>マンツーマンサポート</p>
+  </div>
+
+  <div class="feature-card">
+    <p>未経験でも安心のカリキュラム</p>
+  </div>
+
+  <div class="feature-card">
+    <p>案件獲得プログラム</p>
+  </div>
+</div>
         </div>
       </div>
     </section>
