--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div class="voice-list">
           <div class="voice-item">
             <div class="voice-icon">
-              <img src="img/voice1.JPG" alt="30代男性" />
+              <img src="img/people_1.jpg" alt="30代男性" />
             </div>
             <div class="voice-box">
               <p class="voice-age">30代前半/男性<br />2023年5月入会</p>
@@ -176,7 +176,7 @@
 
           <div class="voice-item">
             <div class="voice-icon">
-              <img src="img/voice2.JPG" alt="20代女性" />
+              <img src="img/people_2.jpg" alt="20代女性" />
             </div>
             <div class="voice-box">
               <p class="voice-age">20代後半/女性<br />2022年6月入会</p>
@@ -188,7 +188,7 @@
 
           <div class="voice-item">
             <div class="voice-icon">
-              <img src="img/voice3.JPG" alt="20代女性" />
+              <img src="img/people_5.jpg" alt="20代女性" />
             </div>
             <div class="voice-box">
               <p class="voice-age">20代後半/女性<br />2023年4月入会</p>
@@ -200,7 +200,7 @@
 
           <div class="voice-item">
             <div class="voice-icon">
-              <img src="img/voice4.JPG" alt="20代男性" />
+              <img src="img/people_3.jpg" alt="20代男性" />
             </div>
             <div class="voice-box">
               <p class="voice-age">20代前半/男性<br />2023年8月入会</p>
