--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 </head>
 
 <body>
-  <header id="header">
+  <header id="header" class="header">
     <div class="section-wrapper">
+      <div class="header-inner">
       <!-- 左：ロゴ -->
       <h1 class="header-logo">
         <a href="#">
@@ -76,15 +77,16 @@
           <span>無料カウンセリングを予約する</span>
         </a>
       </div>
-    </div>
+      </div>
 
-    <div class="hamburger">
+      <div class="hamburger">
       <span></span>
       <span></span>
       <span></span>
     </div>
 
     <div id="mask"></div>
+    </div>
   </header>
 
   <main>
@@ -215,7 +217,7 @@
     <!-- 選ばれる理由 -->
     <section class="reason" id="reason">
       <div class="section-wrapper">
-        <div class="section-heaser">
+        <div class="section-header">
           <p class="section-subtitle">Why Choose Us?</p>
           <h2 class="section-title">プロナビが選ばれる3つの理由</h2>
         </div>
