“ボタン削除”

--- a/index.html
+++ b/index.html
@@ -516,10 +516,10 @@
                   <div class="support-content-left">
                     <p>毎週の目標を立て、担当コーチと進捗を共有。</p>
                     <p>
-                      1週間ごとに振り返りとフィードバックで、成長を実感できます
+                      1週間ごとに振り返りとフィードバックで、成長を実感できます。
                     </p>
 
-                    <button class="btn detail-btn">詳しく見る</button>
+                    <!-- <button class="btn detail-btn">詳しく見る</button> -->
 
                     <div class="detail-text">
                       <p>
@@ -550,7 +550,7 @@
                       いつでもコーチに質問できるから、つまずかずに学習が続く。
                     </p>
 
-                    <button class="btn detail-btn">詳しく見る</button>
+                    <!-- <button class="btn detail-btn">詳しく見る</button> -->
 
                     <div class="detail-text">
                       <p>担当コーチが24時間公式LINEで質問対応。</p>
@@ -577,7 +577,7 @@
                     <p>学習後も安心。</p>
                     <p>プロの営業マンがあなたの初案件獲得まで伴走します。</p>
 
-                    <button class="btn detail-btn">詳しく見る</button>
+                    <!-- <button class="btn detail-btn">詳しく見る</button> -->
 
                     <div class="detail-text">
                       <p>
@@ -604,7 +604,7 @@
                       プロナビには、アバターで参加できるオンライン作業会「メタリーフ」があります。
                     </p>
 
-                    <button class="btn detail-btn">詳しく見る</button>
+                    <!-- <button class="btn detail-btn">詳しく見る</button> -->
 
                     <div class="detail-text">
                       <p>
