--- a/index.html
+++ b/index.html
@@ -344,7 +344,8 @@
         <div class="section-wrapper">
           <div class="study-img">
             <div class="study-characters">
-              <img src="img/study1.svg" />
+              <!-- <img src="img/study1.svg" /> -->
+              <img src="img/study_4.png" />
             </div>
             <div class="study-phones">
               <img src="img/line1.jpg" />
