--- a/index.html
+++ b/index.html
@@ -323,12 +323,14 @@
         <div class="study-item">
           <div class="study-text">
             <p>
-              あなたの課題を分析し、最も効果的な学習を提案します。<br />
-              プログラミングを効率よく身につけるには、“目的を意識して学ぶ”ことが大切です。<br />
+              あなたの課題を分析し、最も効果的な学習を提案します。<br/>
+              プログラミングを効率よく身につけるには、
+              <span class="bold">“目的を意識して学ぶ”</span>
+              ことが大切です。<br />
               ProNaviでは、あなたの現在のスキルや目標を丁寧に分析し、無駄のない学習プランで成長を最短化します。
             </p>
             <p>
-              続けられる環境が、確実な成長を生み出す。<br />
+              <span class="bold">続けられる環境が、確実な成長を生み出す。</span><br/>
               学習の継続こそが、スキルアップの最大のカギ。<br />
               ProNaviでは、あなたの生活リズムに合わせたスケジュール設計と、コーチからのメッセージサポートで、学習を習慣化します。
             </p>
@@ -496,7 +498,7 @@
         <div class="support">
           <div class="section-wrapper">
             <div class="support-title-box">
-              <p class="support-title">our support</p>
+              <h2 class="support-title">our support</h2>
               <p class="support-text">
                 学習をスムーズに進めるための「効率的な学習環境」
                 <br />プロナビでは、テクノロジーと伴走サポートで
