“スライダー変更”

--- a/index.html
+++ b/index.html
@@ -634,27 +634,25 @@
           </div>
           <!-- wrapper 閉じ -->
 
-          <div class="support-slider">
-            <div class="img-wrap">
-              <div class="img-bg"></div>
-              <img src="img/support1.png" />
-            </div>
-            <div class="img-wrap">
-              <div class="img-bg"></div>
-              <img src="img/support2.png" />
-            </div>
-            <div class="img-wrap">
-              <div class="img-bg"></div>
-              <img src="img/support3.png" />
-            </div>
-            <div class="img-wrap">
-              <div class="img-bg"></div>
-              <img src="img/support4.png" />
-            </div>
-            <div class="img-wrap">
-              <div class="img-bg"></div>
-              <img src="img/support5.png" />
-            </div>
+          <!-- 1列目：メタリーフ -->
+          <div class="support-slider avatar-slider">
+            <div><img src="img/support1.png"></div>
+            <div><img src="img/support3.png"></div>
+            <div><img src="img/metaimg.png"></div>
+            <div><img src="img/metaimg1.png"></div>
+            <div><img src="img/metaimg2.png"></div>
+            <div><img src="img/metaimg4.png"></div>
+          </div>
+
+          <!-- 2列目：オフ会 -->
+          <div class="support-slider meetup-slider">
+            <div><img src="img/support4.png"></div>
+            <div><img src="img/support5.png"></div>
+            <div><img src=""></div>
+            <div><img src=""></div>
+            <div><img src=""></div>
+            <div><img src=""></div>
+            <div><img src=""></div>
           </div>
 
           <a href="#" class="support-btn btn-gradient section-wrapper">
