“スライダー追加”

--- a/index.html
+++ b/index.html
@@ -648,11 +648,13 @@
           <div class="support-slider meetup-slider">
             <div><img src="img/support4.png"></div>
             <div><img src="img/support5.png"></div>
-            <div><img src=""></div>
-            <div><img src=""></div>
-            <div><img src=""></div>
-            <div><img src=""></div>
-            <div><img src=""></div>
+            <div><img src="off1.jpeg"></div>
+            <div><img src="off2.jpeg"></div>
+            <div><img src="off3.jpeg"></div>
+            <div><img src="off4.jpeg"></div>
+            <div><img src="off5.jpeg"></div>
+            <div><img src="off6.jpeg"></div>
+            <div><img src="off7.jpeg"></div>
           </div>
 
           <a href="#" class="support-btn btn-gradient section-wrapper">
